--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -18,3 +18,6 @@ jobs:
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
           server-dir: /public_html/organizer/ #change this to /public_html/organizer-staging/(staging subdomain folder name)
+
+
+          # this file is for the staging branch, what i am trying to figure out is how this works, does it run in the defined linux environment or does it run on the server?
